# ShowJCR

./: CMakeLists.txt  README.md  aboutdialog.h  batchquerydialog.cpp  batchquerydialog.h  main.cpp  showjcr.cpp  showjcr.h  sqlitedb.cpp  sqlitedb.h  tableselectordialog.h  trendchartdialog.cpp  trendchartdialog.h
